# url-shortener

./: README.md  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  setup.py
database/: caching.py  postgres.py  redis.py
src/: main.py  settings.py
src/database/: caching.py  postgres.py  redis.py
src/static/: hello.html  script.js
static/: hello.html  script.js  style.css
tests/: test_main.py
