[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Ben <discordben7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pydantic-settings = "^2.4.0"
redis = "^5.0.8"
asyncpg = "^0.29.0"
pg-table-builder = "^1.1.0"
validators = "^0.33.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
